# webrtcdesktop-win

./: .gitattributes  .gitignore  CMakeLists.txt
3rd/include/rtc/modules/video_coding/codecs/h264/: h264_color_space.h  h264_decoder_impl.h  h264_encoder_impl.h
3rd/lib/: jsoncpp.lib  jsoncpp_static.lib  jsoncppd.lib  webrtc.lib  webrtcd.lib
twrtc/: CMakeLists.txt  main.cpp  twrtc.cpp  twrtc.h  twrtc.qrc  twrtc.ui
twrtc/module/: WebsocketClient.cpp  WebsocketClient.h  pushclient.cpp  pushclient.h  signaling_client.cpp  signaling_client.h
twrtc/module/demo/: conductor.cpp  conductor.h  defaults.cpp  frame_generator.cpp  frame_generator_capturer.cpp  frame_generator_capturer.h  frame_utils.cpp  missing_symbols.cpp  peer_connection_client.cpp  test_video_capturer.cpp  vcm_capturer.cpp  vcm_capturer.h
